# SilKit_py

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  pyproject.toml  requirements.txt
_.github/workflows/: conda.yml
conda.recipe/: meta.yaml
docs/: python_example.rst
src/: ICanController.hpp  ILifecycleService.hpp  PubSub.hpp  main.cpp
src/SilKit_py/: __init__.py  __init__.pyi
tests/: common.py  test_ICanController.py  test_ILifecycleService.py  test_PubSub.py  test_basic.py
